--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">Cabecera</div>
         <div id="post">
-            <h1>Este es el título atractivo de master 222</h1>
+            <h1>Este es el título atractivo con conexion SSH</h1>
             <section class="parrafos">
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
