--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        
+    </header>
+
     <div id="container">
         <div id="cabecera">Cabecera</div>
         <div id="post">
@@ -20,5 +25,10 @@
             </section>
         </div>
     </div>
+
+    <footer>
+        
+    </footer>
+
 </body>
 </html>
